--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "express-force-ssl": "^0.3.2",
     "geolib": "^2.0.22",
     "getconfig": "^4.1.0",
-    "home-path": "^1.0.5",
+    "home-path": "^1.0.6",
     "ip": "^1.1.5",
     "lodash": "^4.17.4",
+    "python-shell": "^0.5.0",
     "random-word": "^2.0.0",
     "randomstring": "^1.1.5",
     "signal-master": "git+https://samelie@github.com/samelie/signalmaster.git",
